# mingus

./: Makefile.am  configure.ac  mingus.pc.in
m4/: glib-tap.mk
mingus/: Makefile.am  mingus-server-private.h  mingus-server.c  mingus-server.h  mingus.h
tests/: Makefile.am  basic.c
